###CHANGELOG###
--v0.2.1
*Bugfix: Now supports utf-8 paths
*Bugfix: Now it refreshes correctly the output path.
--v0.2--
* mencoder command line no more hard-coded: you can now set it in advanced>preferences
* Major restructuration of code in fuze.py
* Changed default mencoder options, using the last suggested by ewelot
* Now it also supports image conversion!
--v0.1--
* First public release