@@ -7,7 +7,7 @@ OVERLAPPED 1
 ADD_IMMED 0
 AVI FORCE MP3VBR 0
 END WITH
-LOAD C:\volkerballdvd-006.temp.avi
+LOAD C:\ni cde.temp.avi
 WITH SET OPTION
 FILEORDER 1 0
 ADD_IMMED 1
