@@ -2,6 +2,7 @@
 --v0.2.1
 *Bugfix: Now supports utf-8 paths
 *Bugfix: Now it refreshes correctly the output path.
+*Bugfix: Fixed whitespace basename error (you couldn't convert files with whitespace in their name)
 --v0.2--
 * mencoder command line no more hard-coded: you can now set it in advanced>preferences
 * Major restructuration of code in fuze.py
